# Electricity-Data-Pipeline

./: .gitignore  pyproject.toml
src/app/: ElectricityData.py  OpenElectricity.py  OpenMeteo.py  WeatherData.py  analysis.ipynb  config.py  load.py  main.py
